# fin-qdrant-rag

./: .gitignore  Makefile  README.md  env.example  pyproject.toml
data/md/: FOLDER_STRUCTURE.md  FRONTEND_KNOWLEDGE.md  MEMORY_SYSTEM_DESIGN.md  PROJECT_PLAN.md  TASKS.md
docker/: Dockerfile.api  Dockerfile.frontend  docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: Background.tsx  CardAnimated.tsx  ChatComponent.tsx  ChatContainer.tsx  FinanceAssistantChat.tsx  Footer.tsx  GithubButton.tsx  home.tsx
frontend/src/data/: cards.ts
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: fileUtils.ts
scripts/: check_setup.sh  create_tables.py
src/: main.py
src/app/: main.py
src/app/database/: pg_connection.py
src/core/: hybrid_memory_manager.py  memory_manager.py  memory_strategy.py  openai_client.py  qdrant_client.py  redis_memory_manager.py  stock_assistant_config.py
src/core/logging/: config.py
src/core/utils/: embedding.py  parser.py
src/database/: pg_connection.py  redis_connection.py
src/features/endpoints/: chat.py  upload.py
src/features/services/: chat_service.py  (+1 more)
src/tests/: conftest.py  test_chat_endpoint.py  test_embedding.py  test_pdf_parser.py  test_pg_connection.py  test_qdrant_client.py  test_rag_integration.py  test_redis_memory.py  test_upload_endpoint.py
tests/: test_chat_endpoint.py  test_main.py  test_pg_connection.py  test_pydantic_chat.py
(+9 files in other folders)
